ready to deploy

--- a/.github/workflows/ie-bank-backend.yml
+++ b/.github/workflows/ie-bank-backend.yml
@@ -11,14 +11,19 @@ permissions:
   id-token: write
 
 env:
-  BACKEND_WEBAPP_DEV: aguadamillas-be-dev
+  BACKEND_WEBAPP_DEV: rorosaga-be-dev
+  BACKEND_WEBAPP_UAT: rorosaga-be-uat
 
 jobs:
   build:
     
     runs-on: ubuntu-latest
     env:
-      ENV: ghci
+      ENV: dev
+      DBUSER: ${{ secrets.DBUSER }}
+      DBPASS: ${{ secrets.DBPASS }}
+      DBHOST: ${{ secrets.DBHOST }}
+      DBNAME: ${{ secrets.DBNAME }}
 
     steps:
     - uses: actions/checkout@v4
@@ -49,11 +54,12 @@ jobs:
         path: |
           . 
 
-  deploy:
+  deploy-dev:
+    if: github.ref != 'refs/heads/main' && github.event_name == 'push'
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Development'
+      name: 'DEV'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -73,4 +79,31 @@ jobs:
       with:
         app-name: ${{ env.BACKEND_WEBAPP_DEV }}
         package: .
+
+  deploy-uat:
+    if: github.event_name == 'pull_request' && github.base_ref == 'main'
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'UAT'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+    - name: Download artifact from build job
+      uses: actions/download-artifact@v4
+      with:
+        name: python-app
+        path: .
     
+    - uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: 'Deploy to Azure Web App'
+      uses: azure/webapps-deploy@v3
+      id: deploy-to-webapp
+      with:
+        app-name: ${{ env.BACKEND_WEBAPP_UAT }}
+        package: .
+      
+      
