--- a/.github/workflows/ie-bank-backend.yml
+++ b/.github/workflows/ie-bank-backend.yml
@@ -55,7 +55,7 @@ jobs:
           . 
 
   deploy-dev:
-    if: github.ref != 'refs/heads/main' && github.event_name == 'push'
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     needs: build
     environment:
@@ -81,7 +81,7 @@ jobs:
         package: .
 
   deploy-uat:
-    if: github.event_name == 'pull_request' && github.base_ref == 'main'
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     needs: build
     environment:
