--- a/.github/workflows/ie-bank-backend.yml
+++ b/.github/workflows/ie-bank-backend.yml
@@ -15,7 +15,7 @@ env:
   BACKEND_WEBAPP_UAT: rorosaga-be-uat
 
 jobs:
-  build:
+  build-dev:
     
     runs-on: ubuntu-latest
     env:
@@ -53,11 +53,49 @@ jobs:
         name: python-app
         path: |
           . 
+  build-uat:
 
+    runs-on: ubuntu-latest
+    env:
+      ENV: dev
+      DBUSER: ${{ secrets.DBUSER }}
+      DBPASS: ${{ secrets.DBPASS }}
+      DBHOST: ${{ secrets.UAT_DBHOST }}
+      DBNAME: ${{ secrets.UAT_DBNAME }}
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.11"
+    - name: Upgrade pip
+      run: |
+        python -m pip install --upgrade pip
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+    - name: Lint with flake8
+      run: |
+        pip install flake8 pytest
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Test with pytest
+      run: |
+        python -m pytest --cov=iebank_api -v
+    - name: Upload artifact for deployment jobs
+      uses: actions/upload-artifact@v4
+      with:
+        name: python-app
+        path: |
+          . 
+        
   deploy-dev:
     if: github.ref != 'refs/heads/main' && github.event_name == 'push'  || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-dev
     environment:
       name: 'DEV'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
@@ -83,7 +121,7 @@ jobs:
   deploy-uat:
     if: github.event_name == 'pull_request' && github.base_ref == 'main' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-uat
     environment:
       name: 'UAT'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
