--- a/.github/workflows/ie-bank-backend.yml
+++ b/.github/workflows/ie-bank-backend.yml
@@ -50,7 +50,7 @@ jobs:
     - name: Upload artifact for deployment jobs
       uses: actions/upload-artifact@v4
       with:
-        name: python-app
+        name: python-app-dev
         path: |
           . 
   build-uat:
@@ -88,7 +88,7 @@ jobs:
     - name: Upload artifact for deployment jobs
       uses: actions/upload-artifact@v4
       with:
-        name: python-app
+        name: python-app-uat
         path: |
           . 
         
