--- a/.github/workflows/ie-bank-backend.yml
+++ b/.github/workflows/ie-bank-backend.yml
@@ -104,7 +104,7 @@ jobs:
     - name: Download artifact from build job
       uses: actions/download-artifact@v4
       with:
-        name: python-app
+        name: python-app-dev
         path: .
     
     - uses: azure/login@v2
@@ -130,7 +130,7 @@ jobs:
     - name: Download artifact from build job
       uses: actions/download-artifact@v4
       with:
-        name: python-app
+        name: python-app-uat
         path: .
     
     - uses: azure/login@v2
