--- a/.github/workflows/safebank-backend-old.yml
+++ b/.github/workflows/safebank-backend-old.yml
@@ -1,9 +1,9 @@
-name: ie-bank-backend
+name: safebank-backend
 
 on:
-  push:
-  pull_request:
-    branches: [ "main" ]
+  # push:
+  # pull_request:
+  #   branches: [ "main" ]
   workflow_dispatch:
 
 permissions:
@@ -15,7 +15,7 @@ env:
   BACKEND_WEBAPP_UAT: rorosaga-be-uat
 
 jobs:
-  build-dev:
+  build:
     
     runs-on: ubuntu-latest
 
@@ -44,46 +44,14 @@ jobs:
     - name: Upload artifact for deployment jobs
       uses: actions/upload-artifact@v4
       with:
-        name: python-app-dev
-        path: |
-          . 
-  build-uat:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.11"
-    - name: Upgrade pip
-      run: |
-        python -m pip install --upgrade pip
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
-    - name: Lint with flake8
-      run: |
-        pip install flake8 pytest
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        python -m pytest --cov=iebank_api -v
-    - name: Upload artifact for deployment jobs
-      uses: actions/upload-artifact@v4
-      with:
-        name: python-app-uat
+        name: python-app
         path: |
           . 
         
   deploy-dev:
     if: github.ref != 'refs/heads/main' && github.event_name == 'push'  || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
-    needs: build-dev
+    needs: build
     environment:
       name: 'DEV'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
@@ -92,7 +60,7 @@ jobs:
     - name: Download artifact from build job
       uses: actions/download-artifact@v4
       with:
-        name: python-app-dev
+        name: python-app
         path: .
     
     - uses: azure/login@v2
@@ -109,7 +77,7 @@ jobs:
   deploy-uat:
     if: github.event_name == 'pull_request' && github.base_ref == 'main' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
-    needs: build-uat
+    needs: build
     environment:
       name: 'UAT'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
@@ -118,7 +86,7 @@ jobs:
     - name: Download artifact from build job
       uses: actions/download-artifact@v4
       with:
-        name: python-app-uat
+        name: python-app
         path: .
     
     - uses: azure/login@v2
