--- a/.github/workflows/safebank-docker-backend.yml
+++ b/.github/workflows/safebank-docker-backend.yml
@@ -17,14 +17,54 @@ env:
 
 jobs:
 
-    build-and-deploy-dev:
+    build:
+      runs-on: ubuntu-latest
+
+      steps:
+        - uses: actions/checkout@v4
+
+        - name: Set up Python 3.11
+          uses: actions/setup-python@v5
+          with:
+            python-version: "3.11"
+
+        - name: Upgrade pip
+          run: python -m pip install --upgrade pip
+
+        - name: Install dependencies
+          run: pip install -r requirements.txt
+
+        - name: Lint with flake8
+          run: |
+            pip install flake8 pytest
+            flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+            flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+        # - name: Test with pytest
+        #   run: ENV=local pytest
+
+        - name: Save Docker context as artifact
+          uses: actions/upload-artifact@v4
+          with:
+            name: docker-context
+            path: .
+            if-no-files-found: error
+
+    deploy-dev:
         runs-on: ubuntu-latest
+        needs: build
         outputs:
             image-version: ${{ steps.image-version.outputs.version }}
 
         steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
+
+        - name: Download Docker context artifact
+          uses: actions/download-artifact@v4
+          with:
+            name: docker-context
+
+        # - name: Checkout code
+        #   uses: actions/checkout@v4
 
         - name: "Log in to azure"
           uses: azure/login@v2
@@ -35,15 +75,17 @@ jobs:
           uses: Azure/cli@v2.1.0
           with:
             inlineScript: |
-                echo "REGISTRY_USERNAME=$(az keyvault secret show --name acr-username --vault-name ${{ env.KEY_VAULT_NAME_DEV }} --query value -o tsv)" >> $GITHUB_ENV
-                echo "REGISTRY_PASSWORD=$(az keyvault secret show --name acr-password0 --vault-name ${{ env.KEY_VAULT_NAME_DEV }} --query value -o tsv)" >> $GITHUB_ENV
+                REGISTRY_USERNAME=$(az keyvault secret show --name acr-username --vault-name ${{ env.KEY_VAULT_NAME_DEV }} --query value -o tsv)
+                REGISTRY_PASSWORD=$(az keyvault secret show --name acr-password0 --vault-name ${{ env.KEY_VAULT_NAME_DEV }} --query value -o tsv)
+                echo "REGISTRY_USERNAME=${REGISTRY_USERNAME}" >> $GITHUB_ENV
+                echo "REGISTRY_PASSWORD=${REGISTRY_PASSWORD}" >> $GITHUB_ENV
 
-        - name: "Login to registry"
-          uses: azure/docker-login@v2
-          with:
-            login-server: ${{ env.DOCKER_REGISTRY_SERVER_URL_DEV }}
-            username: ${{ env.REGISTRY_USERNAME }}
-            password: ${{ env.REGISTRY_PASSWORD }}
+        # - name: "Login to registry"
+        #   uses: azure/docker-login@v2
+        #   with:
+        #     login-server: ${{ env.DOCKER_REGISTRY_SERVER_URL_DEV }}
+        #     username: ${{ env.REGISTRY_USERNAME }}
+        #     password: ${{ env.REGISTRY_PASSWORD }}
 
         - name: "Set image version"
           id: image-version
@@ -57,8 +99,9 @@ jobs:
 
         - name: "Docker build and push image"
           run: |
-            docker build . -t ${{ env.DOCKER_REGISTRY_SERVER_URL_DEV }}/safebank-be:latest #${{ steps.image-version.outputs.version }}
-            docker push ${{ env.DOCKER_REGISTRY_SERVER_URL_DEV }}/safebank-be:latest # ${{ steps.image-version.outputs.version }}
+            docker build . -t ${{ env.DOCKER_REGISTRY_SERVER_URL_DEV }}/safebank-be:latest .
+            docker login ${{ env.DOCKER_REGISTRY_SERVER_URL_DEV }} -u ${{ env.REGISTRY_USERNAME }} -p ${{ env.REGISTRY_PASSWORD }}
+            docker push ${{ env.DOCKER_REGISTRY_SERVER_URL_DEV }}/safebank-be:latest 
 
 
     build-and-deploy-uat:
