--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,8 @@ psycopg2==2.9.7
 python-dotenv==0.21.0
 pytest
 pytest-cov
+opencensus==0.11.4
+opencensus-context==0.1.3
+opencensus-ext-azure==1.1.13
+opencensus-ext-flask==0.8.2
 azure-identity==1.19.0
