--- a/.github/workflows/safebank-docker-backend.yml
+++ b/.github/workflows/safebank-docker-backend.yml
@@ -48,6 +48,7 @@ jobs:
             if-no-files-found: error
 
     deploy-dev:
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         runs-on: ubuntu-latest
         needs: build
         outputs:
@@ -100,6 +101,7 @@ jobs:
 
 
     deploy-uat:
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       runs-on: ubuntu-latest
       needs: build
       outputs:
@@ -151,6 +153,7 @@ jobs:
           docker push ${{ env.DOCKER_REGISTRY_SERVER_URL_UAT }}/safebank-be:latest 
 
     deploy-prod:
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       runs-on: ubuntu-latest
       needs: build
       outputs:
