--- a/.github/workflows/safebank-docker-backend.yml
+++ b/.github/workflows/safebank-docker-backend.yml
@@ -149,6 +149,7 @@ jobs:
 
   automated-api-tests:
     runs-on: ubuntu-latest
+    needs: deploy-uat
     steps:
       - uses: actions/checkout@v4
       - name: Install Postman CLI
