--- a/.github/workflows/safebank-docker-backend.yml
+++ b/.github/workflows/safebank-docker-backend.yml
@@ -3,7 +3,7 @@ name: Deploy backend to Azure Web App
 on:
   push:
   pull_request:
-    branches: ["main"]
+    branches: ["*"]
   workflow_dispatch:
 
 env:
@@ -46,7 +46,7 @@ jobs:
           if-no-files-found: error
 
   deploy-dev:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    #  if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build
     outputs:
@@ -97,7 +97,7 @@ jobs:
           docker push ${{ env.DOCKER_REGISTRY_SERVER_URL_DEV }}/safebank-be:latest
 
   deploy-uat:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    #  if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build
     outputs:
