add pytest tests

--- a/.github/workflows/safebank-backend-old.yml
+++ b/.github/workflows/safebank-backend-old.yml
@@ -11,6 +11,7 @@ permissions:
   id-token: write
 
 env:
+  ENV: "ghci"
   BACKEND_WEBAPP_DEV: rorosaga-be-dev
   BACKEND_WEBAPP_UAT: rorosaga-be-uat
 
