--- a/.github/workflows/safebank-docker-backend.yml
+++ b/.github/workflows/safebank-docker-backend.yml
@@ -2,7 +2,6 @@ name: Deploy backend to Azure Web App
 
 on:
   push:
-    branches: ["*"]
   pull_request:
     branches: ["main"]
   workflow_dispatch:
@@ -50,7 +49,7 @@ jobs:
           if-no-files-found: error
 
   deploy-dev:
-    #if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build
     outputs:
@@ -101,7 +100,7 @@ jobs:
           docker push ${{ env.DOCKER_REGISTRY_SERVER_URL_DEV }}/safebank-be:latest
 
   deploy-uat:
-    #if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build
     outputs:
