--- a/.github/workflows/safebank-docker-backend.yml
+++ b/.github/workflows/safebank-docker-backend.yml
@@ -161,8 +161,9 @@ jobs:
           npm install -g newman
 
       - name: Run Postman tests
-        run: |
-          newman run ../../tests/ci/safebank.postman_collection.json
+      run: |
+        newman run ./tests/ci/safebank.postman_collection.json
+        
 
   deploy-prod:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
