--- a/.github/workflows/safebank-docker-backend.yml
+++ b/.github/workflows/safebank-docker-backend.yml
@@ -52,6 +52,10 @@ jobs:
     # if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build
+    env:
+      ADMIN_USER: ${{ secrets.ADMIN_USER }}
+      ADMIN_PASS: ${{ secrets.ADMIN_PASS }}
+
     outputs:
       image-version: ${{ steps.image-version.outputs.version }}
 
@@ -103,6 +107,10 @@ jobs:
   #   if: github.event_name == 'push' && github.ref == 'refs/heads/main'
   #   runs-on: ubuntu-latest
   #   needs: build
+  #   env:
+  #     ADMIN_USER: ${{ secrets.ADMIN_USER }}
+  #     ADMIN_PASS: ${{ secrets.ADMIN_PASS }}
+  #
   #   outputs:
   #     image-version: ${{ steps.image-version.outputs.version }}
 
@@ -166,6 +174,10 @@ jobs:
   #   if: github.event_name == 'push' && github.ref == 'refs/heads/main'
   #   runs-on: ubuntu-latest
   #   needs: build
+  #   env:
+  #     ADMIN_USER: ${{ secrets.ADMIN_USER }}
+  #     ADMIN_PASS: ${{ secrets.ADMIN_PASS }}
+  #
   #   outputs:
   #     image-version: ${{ steps.image-version.outputs.version }}
 
