--- a/.github/workflows/safebank-docker-backend.yml
+++ b/.github/workflows/safebank-docker-backend.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Save Docker context as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: docker-context
+          name: docker-context-dev
           path: .
           if-no-files-found: error
 
@@ -75,7 +75,7 @@ jobs:
       - name: Download Docker context artifact
         uses: actions/download-artifact@v4
         with:
-          name: docker-context
+          name: docker-context-dev
 
       # - name: Checkout code
       #   uses: actions/checkout@v4
@@ -148,7 +148,7 @@ jobs:
       - name: Save Docker context as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: docker-context
+          name: docker-context-uat
           path: .
           if-no-files-found: error
 
@@ -167,7 +167,7 @@ jobs:
       - name: Download Docker context artifact
         uses: actions/download-artifact@v4
         with:
-          name: docker-context
+          name: docker-context-uat
 
       # - name: Checkout code
       #   uses: actions/checkout@v4
@@ -259,7 +259,7 @@ jobs:
       - name: Save Docker context as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: docker-context
+          name: docker-context-prod
           path: .
           if-no-files-found: error
 
@@ -278,7 +278,7 @@ jobs:
       - name: Download Docker context artifact
         uses: actions/download-artifact@v4
         with:
-          name: docker-context
+          name: docker-context-prod
 
       # - name: Checkout code
       #   uses: actions/checkout@v4
