--- a/.github/workflows/safebank-docker-backend.yml
+++ b/.github/workflows/safebank-docker-backend.yml
@@ -299,7 +299,7 @@ jobs:
         uses: Azure/cli@v2.1.0
         with:
           inlineScript: |
-            echo "VUE_APP_APPINSIGHTS_INSTRUMENTATIONKEY=$(az keyvault secret show --name appInsightsKey --vault-name ${{ env.KEY_VAULT_NAME_UAT }} --query value -o tsv)" >> $GITHUB_ENV
+            echo "VUE_APP_APPINSIGHTS_INSTRUMENTATIONKEY=$(az keyvault secret show --name appInsightsKey --vault-name ${{ env.KEY_VAULT_NAME_PROD }} --query value -o tsv)" >> $GITHUB_ENV
 
       - name: "Set image version"
         id: image-version
