--- a/.github/workflows/safebank-docker-backend.yml
+++ b/.github/workflows/safebank-docker-backend.yml
@@ -61,7 +61,7 @@ jobs:
           if-no-files-found: error
 
   deploy-dev:
-    # if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build-dev
     env:
@@ -153,7 +153,7 @@ jobs:
           if-no-files-found: error
 
   deploy-uat:
-    # if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build-uat
     env:
@@ -264,7 +264,7 @@ jobs:
           if-no-files-found: error
 
   deploy-prod:
-    # if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build-prod
     env:
